syntax = "proto3";

package kvpb;

option go_package = "kv/pkg/kvpb";

// WAL entry类型
enum EntryType {
  ENTRY_NORMAL = 0;
  ENTRY_CONF_CHANGE = 1;
  ENTRY_META = 2;
}

// WAL分段的单条entry
message WALEntry {
  uint64 term = 1;
  uint64 index = 2;
  EntryType type = 3;
  bytes data = 4; // raft entry、kv op等protobuf序列化内容
} 